<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/patternToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:navigationIcon="@android:drawable/ic_menu_revert"
        app:title="@string/pattern_rules_page_title"
        app:subtitle="@string/pattern_rules_page_subtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/patternRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:clipToPadding="false"
        android:layout_weight="1"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/btnOpenBatchAddPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pattern_add_button" />
</LinearLayout>
